--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'mixins';
 
 // Full-height content
 html,
@@ -16,3 +17,26 @@ h3 { font-size: $h3-font-size; }
 h4 { font-size: $h4-font-size; }
 h5 { font-size: $h5-font-size; }
 h6 { font-size: $h6-font-size; }
+
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.fixed {
+  position: fixed;
+}
+
+.stretch {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.overflow-hidden {
+  @include overflow(hidden, hidden);
+}
